--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # basic options
-title: NoClouds Blog
+title: Didlie Blog
 author: Isaac Jacobs
 email: everforward@live.com
-description: NoClouds project blog for news, questions, comments and criticism.
+description: Didlie blog for news, questions, comments and criticism.
 github_username: didlie
 
 # Build settings
